# vtm-agent

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  vtm_hunter_vs_vampire.py
.github/workflows/: ci.yml
src/vtm_agent/: eval.py  play.py  train.py
src/vtm_agent/engine/: __init__.py  damage.py  dice.py  hunter.py  person.py  vampire.py
src/vtm_agent/env/: __init__.py  action.py  opponent.py  vtm_combat_env.py
tests/engine/: test_damage.py  test_dice.py  test_person.py  test_vampire.py
tests/env/: test_combat_env.py  test_opponent.py
