[project]
name = "vtm-agent"
version = "0.1.0"
description = "RL agent for Vampire: The Masquerade combat"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0",
    "sb3-contrib>=2.9.0",
    "stable-baselines3>=2.0",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
